fix gap

--- a/src/components/flex/style.css
+++ b/src/components/flex/style.css
@@ -51,3 +51,6 @@
     gap: 16px;
 }
 
+.gap20 {
+    gap: 20px;
+}
